Add support for class_alias to preloading

Related to bug #78918.